--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  intl: ^0.18.0 #for DateFormat
+  http: ^0.13.5 #for downloading url files
+  path_provider: ^2.0.13 #to get a temporary directory
+  github: ^9.7.0 #github api
+  json_annotation: ^4.7.0 #for json_serializable
+  collection: ^1.17.0 #for tests: compare lists
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,6 +45,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.0.0 #for json_serializable #to rebuild run: flutter packages pub run build_runner build
+  json_serializable: ^6.5.4 #for examples: https://github.com/google/json_serializable.dart/tree/master/example
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -62,6 +70,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/autoSetup/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
