feat: add when parser

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -26,3 +26,4 @@ linter:
     prefer_single_quotes: true
     sort_constructors_first: true
     sort_pub_dependencies: false
+    parameter_assignments: false
