--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  timezone: ^0.9.1 #notifications (scheduled)
+  flutter_local_notifications: ^13.0.0 #notifications
   syncfusion_flutter_calendar: ^20.4.53 #calendar
   intl: ^0.18.0 #for DateFormat
   http: ^0.13.5 #for downloading url files
