--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  provider: ^6.0.5 #for singleton connection to database + storage
   timezone: ^0.9.1 #notifications (scheduled)
   flutter_local_notifications: ^13.0.0 #notifications
   syncfusion_flutter_calendar: ^20.4.53 #calendar
